--- a/style.css
+++ b/style.css
@@ -1,4 +1,57 @@
 body{
-	background-color: darkgreen;
+	background-image: url(img/BG.png);
+	color: black;
+}
+
+/*HEADER*/
+.header{
+	border: 1px solid black;
+	margin: 10px;
+}
+
+.title{
+	font-size: 50px;
+	text-align: center;
+	box-sizing: border-box;
+	background-color: blue;
+	opacity: .5;
 	color: white;
 }
+
+.mainnav{
+	border: 1px solid black;
+	margin: 10px;
+	padding: 5px;
+	height: 25px;
+}
+
+.nav1{
+	background-color: green;
+	float:	right;
+}
+
+.nav2{
+	background-color: blueviolet;
+	float: left;
+	width: 70px;
+}
+
+div .nav2{
+	align-content: center;
+	width: 70px;
+}
+
+/*MAIN*/
+.main{
+	border: 1px solid black;
+	margin: 10px;
+	padding: 10px;
+}
+
+/*FOOTER*/
+.footer{
+	border: 1px solid black;
+	margin: 10px;
+	padding: 10px;
+}
+
